# oob-evaluation

./: .env.template  .env.testing  .gitignore  CLAUDE.md  PLAN.md  PYTHON_COMPATIBILITY.md  README-CONFIGURATION.md  README.md  SPEC.md  T085_SYSTEM_SUMMARY.md  T085_VALIDATION_GUIDE.md  docker-compose.dev.yml  docker-compose.development.yml  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.validation.yml  docker-compose.yml  run_t085_validation.sh  setup_backend.py  t085_comprehensive_validator.py  t085_comprehensive_validator_broken.py  t085_error_validation.py  t085_requirements.txt  t085_validation_report_20250911_182543.txt  t085_workflow_validations.py  test_t085_system.py  validate_quickstart.py  validation_requirements.txt
backend/: .flake8  README.md  alembic.ini  pyproject.toml  requirements-python312.txt  requirements.txt
backend/alembic/: README.md  env.py
backend/docs/: Makefile  README.md  doc_generator.py  generate_docs.sh  generate_openapi.py  index.html  integration_test.py
backend/docs/api/: README.md  index.html  openapi.json
backend/docs/examples/: curl_examples.sh  python_examples.py  request_response_examples.json
backend/docs/guides/: authentication.md  error-handling.md  examples.md  quick-start.md
backend/migrations/: 001_create_images_table.sql  002_create_annotations_table.sql  003_create_models_table.sql  004_create_datasets_table.sql  005_create_training_jobs_table.sql  006_create_inference_jobs_table.sql  007_create_performance_metrics_table.sql  008_create_deployments_table.sql
backend/src/: main.py
backend/src/cli/: README.md  annotation_cli.py  inference_cli.py  ml_models_cli.py  training_cli.py
backend/src/core/: config.py  config_validator.py  secrets_manager.py  security.py
celery/: README.md  (+1 more)
(+225 files in other folders)
